--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.2",
     "passport": "^0.4.1",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "react-toastify": "^6.0.8",
+    "use-react-router": "^1.0.7"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
