--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "bulma": "^0.9.0",
     "compression": "^1.7.4",
     "express": "^4.17.1",
+    "jwt-decode": "^2.2.0",
     "morgan": "^1.10.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
