--- a/client/package.json
+++ b/client/package.json
@@ -11,13 +11,12 @@
     "bulma": "^0.9.0",
     "compression": "^1.7.4",
     "express": "^4.17.1",
+    "jwt-decode": "^2.2.0",
     "morgan": "^1.10.0",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.7.0",
-    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-transition-group": "^4.4.1",
