--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,9 @@
     "jwt-decode": "^2.2.0",
     "morgan": "^1.10.0",
     "node-sass": "^4.14.1",
+    "normalize.css": "^8.0.1",
     "react": "^16.13.1",
+    "react-animated-slider": "^2.0.0",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.7.0",
     "react-router-dom": "^5.2.0",
