--- a/client/package.json
+++ b/client/package.json
@@ -3,14 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^22.0.0",
+    "@ckeditor/ckeditor5-react": "^2.1.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "antd": "^4.6.3",
     "axios": "^0.20.0",
     "bootstrap": "^4.5.2",
     "bulma": "^0.9.0",
     "compression": "^1.7.4",
     "express": "^4.17.1",
+    "highlight.js": "^10.2.0",
     "jwt-decode": "^2.2.0",
     "morgan": "^1.10.0",
     "node-sass": "^4.14.1",
@@ -19,10 +23,13 @@
     "react-animated-slider": "^2.0.0",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.7.0",
+    "react-quill": "^1.3.5",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-transition-group": "^4.4.1",
     "reactstrap": "^8.5.1",
+    "redux": "^4.0.5",
     "uuid": "^8.3.0"
   },
   "scripts": {
