--- a/client/package.json
+++ b/client/package.json
@@ -27,9 +27,11 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-simple-chatbot": "^0.6.1",
     "react-transition-group": "^4.4.1",
     "reactstrap": "^8.5.1",
     "redux": "^4.0.5",
+    "styled-components": "^5.2.0",
     "uuid": "^8.3.0"
   },
   "scripts": {
