--- a/temp1/package.json
+++ b/temp1/package.json
@@ -9,6 +9,7 @@
     "faker": "^5.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-click-to-edit": "^1.2.0",
     "react-multi-carousel": "^2.5.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
