can delete portfolio

--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^22.0.0",
     "@ckeditor/ckeditor5-react": "^2.1.0",
+    "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -16,6 +17,7 @@
     "express": "^4.17.1",
     "highlight.js": "^10.2.0",
     "jwt-decode": "^2.2.0",
+    "material-ui-popup-state": "^1.6.1",
     "morgan": "^1.10.0",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
