--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-animated-slider": "^2.0.0",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.7.0",
     "react-quill": "^1.3.5",
