--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^22.0.0",
     "@ckeditor/ckeditor5-react": "^2.1.0",
+    "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -14,17 +15,19 @@
     "bulma": "^0.9.0",
     "compression": "^1.7.4",
     "express": "^4.17.1",
-    "highlight.js": "^10.2.0",
     "jwt-decode": "^2.2.0",
+    "material-ui-popup-state": "^1.6.1",
     "morgan": "^1.10.0",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-animated-slider": "^2.0.0",
     "react-dom": "^16.13.1",
+    "react-draggable": "^4.4.3",
     "react-hook-form": "^6.7.0",
     "react-quill": "^1.3.5",
     "react-redux": "^7.2.1",
+    "react-resizable": "^1.11.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-simple-chatbot": "^0.6.1",
