--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
         "react": "^16.13.1",
         "react-animated-slider": "^2.0.0",
         "react-bootstrap": "^1.3.0",
+        "react-confirm-alert": "^2.6.2",
         "react-dom": "^16.13.1",
         "react-draggable": "^4.4.3",
         "react-hook-form": "^6.7.0",
