--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
+        "@tinymce/tinymce-react": "^3.6.1",
         "antd": "^4.6.3",
         "axios": "^0.20.0",
         "bootstrap": "^4.5.2",
@@ -24,9 +25,9 @@
         "react": "^16.13.1",
         "react-animated-slider": "^2.0.0",
         "react-bootstrap": "^1.3.0",
-        "react-confirm-alert": "^2.6.2",
         "react-dom": "^16.13.1",
         "react-draggable": "^4.4.3",
+        "react-grid-layout": "^1.1.1",
         "react-hook-form": "^6.7.0",
         "react-quill": "^1.3.5",
         "react-redux": "^7.2.1",
@@ -38,6 +39,7 @@
         "reactstrap": "^8.5.1",
         "redux": "^4.0.5",
         "styled-components": "^5.2.0",
+        "suneditor-react": "^2.14.2",
         "uuid": "^8.3.0"
     },
     "scripts": {
