--- a/client/package.json
+++ b/client/package.json
@@ -3,21 +3,18 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@ckeditor/ckeditor5-build-classic": "^22.0.0",
-        "@ckeditor/ckeditor5-react": "^2.1.0",
         "@material-ui/core": "^4.11.0",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
-        "@tinymce/tinymce-react": "^3.6.1",
         "antd": "^4.6.3",
         "axios": "^0.20.0",
         "bootstrap": "^4.5.2",
         "bulma": "^0.9.0",
         "compression": "^1.7.4",
         "express": "^4.17.1",
-        "highlight.js": "^10.2.0",
         "jwt-decode": "^2.2.0",
+        "katex": "^0.12.0",
         "material-ui-popup-state": "^1.6.1",
         "morgan": "^1.10.0",
         "node-sass": "^4.14.1",
@@ -25,13 +22,11 @@
         "react": "^16.13.1",
         "react-animated-slider": "^2.0.0",
         "react-bootstrap": "^1.3.0",
+        "react-confirm-alert": "^2.6.2",
         "react-dom": "^16.13.1",
         "react-draggable": "^4.4.3",
-        "react-grid-layout": "^1.1.1",
         "react-hook-form": "^6.7.0",
-        "react-quill": "^1.3.5",
         "react-redux": "^7.2.1",
-        "react-resizable": "^1.11.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.3",
         "react-simple-chatbot": "^0.6.1",
