--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-    - 'stable'
+    - 14
 
 services:
     - mongodb
@@ -8,6 +8,8 @@ cache:
     directories:
         - node_modules
 
+before_install:
+    - npm i -g npm@6.14.8
 install:
     - npm install
 
