--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,7 @@ language: node_js
 node_js:
     - 14
 
-services:
-    - mongodb
+services: mongodb
 cache:
     directories:
         - node_modules
