--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "client": "npm start --prefix client",
         "dev": "concurrently \"npm run server\" \"npm run client\"",
         "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client",
-        "test": "mocha"
+        "test": "mocha --timeout 30000"
     },
     "author": "Bounty Programmers",
     "license": "ISC",
