--- a/client/package.json
+++ b/client/package.json
@@ -3,11 +3,6 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@material-ui/core": "^4.11.0",
-        "@material-ui/icons": "^4.9.1",
-        "@testing-library/jest-dom": "^4.2.4",
-        "@testing-library/react": "^9.3.2",
-        "@testing-library/user-event": "^7.1.2",
         "antd": "^4.6.3",
         "axios": "^0.20.0",
         "bootstrap": "^4.5.2",
@@ -16,8 +11,6 @@
         "express": "^4.17.1",
         "jwt-decode": "^2.2.0",
         "katex": "^0.12.0",
-        "material-ui-popup-state": "^1.6.1",
-        "morgan": "^1.10.0",
         "node-sass": "^4.14.1",
         "normalize.css": "^8.0.1",
         "react": "^16.13.1",
@@ -27,16 +20,11 @@
         "react-dom": "^16.13.1",
         "react-draggable": "^4.4.3",
         "react-hook-form": "^6.7.0",
-        "react-redux": "^7.2.1",
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.3",
         "react-simple-chatbot": "^0.6.1",
-        "react-transition-group": "^4.4.1",
-        "reactstrap": "^8.5.1",
-        "redux": "^4.0.5",
         "styled-components": "^5.2.0",
-        "suneditor-react": "^2.14.2",
-        "uuid": "^8.3.0"
+        "suneditor-react": "^2.14.2"
     },
     "scripts": {
         "start": "react-scripts start",
